about to finish

--- a/index.html
+++ b/index.html
@@ -68,22 +68,6 @@
     </div>
   </div>
 </header>
-
-<!-- 
-				
-				<div class="header__menu menu">
-					<div class="menu__icon icon-menu">
-						<span></span>
-						<span></span>
-						<span></span>
-					</div>
-					<nav class="menu__body">
-						<ul class="menu__list">
-							<li><a href="" class="menu__link"></a></li>
-						</ul>
-					</nav>
-				</div>
-			 -->
       <div class="title-block">
         <p class="title-block__text">
           Select project,<br />
@@ -366,13 +350,64 @@
           </div>
         </div>
       </div>
+      <div class="cookie">
+        <div class="cookie__text">
+          This website uses cookies to enhance the user experience. Read our
+          <a href="">privacy policy</a> for more info.
+        </div>
+        <button type="button" class="cookie__btn">Accept Cookies</button>
+      </div>
 <footer class="footer">
-	<div class='container'>
-		<div class="footer__row">
-			
-		</div>
-	</div>
-</footer>    </div>
+  <div class="container">
+    <div class="footer__links">
+      <div>
+        <p>Gitpod</p>
+        <a href="">Home</a>
+        <a href="">Features</a>
+        <a href="">Pricing</a>
+        <a href="">Changelog</a>
+        <a href="">Self-Hosted</a>
+        <a href="">Gitpod vs GitHub</a>
+        <a href="">Codespaces</a>
+        <a href="">Status</a>
+      </div>
+      <div>
+        <p>Developer</p>
+        <a href="">Getting started</a>
+        <a href="">Screencasts</a>
+        <a href="">Blog</a>
+        <a href="">Documentation</a>
+        <a href="">Report a bug</a>
+        <a href="">Community</a>
+      </div>
+      <div>
+        <p>Company</p>
+        <a href="">About</a>
+        <a href="">Careers</a>
+        <a href="">Contact</a>
+        <a href="">Media Kit</a>
+      </div>
+      <div>
+        <p>Legal</p>
+        <a href="">Imprint</a>
+        <a href="">Terms of Service</a>
+        <a href="">Privacy Policy</a>
+      </div>
+    </div>
+    <div class="footer__bottom">
+      <div>
+        <img src="img/logo-footer.png" class="footer__logo" />
+        <p>Copyright © 2021 Gitpod</p>
+      </div>
+      <div>
+        <a href=""><img src="img/twitter.png" alt="" /></a>
+        <a href=""><img src="img/github-footer.png" alt="" /></a>
+        <a href=""><img src="img/bitbucket-foooter.png" alt="" /></a>
+      </div>
+    </div>
+  </div>
+</footer>
+    </div>
 
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <!-- <script src="https://code.jquery.com/jquery-migrate-3.0.1.min.js"></script> -->
